Optimized and de-templatized FileFinder.
Previous solution used a map with a custom comparator, which was neat but
inefficient due to many comparisons needed when inserting into map. This
normalizes paths before inserting. (According to callgrind, construction was
reduced from 22e9 to 8e9 operations, and lookup from 27e9 to 7e9.)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,11 +88,9 @@ set(TO_UTF8_HEADER
 source_group(components\\to_utf8 FILES ${TO_UTF8} ${TO_UTF8_HEADER})
 
 set(FILE_FINDER
-    ${COMP_DIR}/file_finder/search.cpp)
+    ${COMP_DIR}/file_finder/file_finder.cpp)
 set(FILE_FINDER_HEADER
-    ${COMP_DIR}/file_finder/file_finder.hpp
-    ${COMP_DIR}/file_finder/filename_less.hpp
-    ${COMP_DIR}/file_finder/search.hpp)
+    ${COMP_DIR}/file_finder/file_finder.hpp)
 source_group(components\\file_finder FILES ${FILE_FINDER} ${FILE_FINDER_HEADER})
 
 set(ESM_STORE
